feat: 뉴스레터 객체 반환으로 수정 및 QueryDSL을 사용하여 행사 정렬 (#96)